--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -1061,6 +1061,68 @@ dictionary OfflineAudioCompletionEventInit : EventInit {
           <dd>이 이벤트의 renderedBuffer 어트리뷰트에 할당될 값</dd>
         </dl>
         <br>
+        <h2>1.4. AudioBuffer 인터페이스</h2>
+        <p>이 인터페이스는 메모리에 상주하는 오디오 에셋을 나타냅니다. 이것은 하나 이상의 채널을 포함할 수 있는데 각 채널은 [-1, 1]의 명목상의 범위를 가지는 32비트 부동 소수점 선형 PCM 값을 가지고 있는 것으로 보이나 이 값들은 이 범위에 국한되지 않습니다. 통상적으로, PCM 데이터의 길이는 꽤 짧을 것이 기대됩니다 (보통 1분보다 짧은 정도). 음악 사운드트랙같은 더 긴 소리들에 대해서는, 스트리밍은 audio 요소와 MediaElementAudioSourceNode와 함께 사용되어야 합니다.</p>
+        <br>
+        <p>AudioBuffer는 하나 이상의 AudioContext에 의해 사용될 수 있고, OfflineAudioContext와 AudioContext 사이에서 공유될 수 있습니다.</p>
+        <br>
+        <p>AudioBuffer는 4개의 내부 슬롯을 갖습니다.</p>
+        <dl>
+          <dt><i>[[number of channels]]</i></dt>
+          <dd>이 AudioBuffer의 오디오 채널의 수. / 자료형: unsigned long</dd>
+          <br>
+          <dt><i>[[length]]</i></dt>
+          <dd>이 AudioBuffer의 각 채널의 길이. / 자료형: unsigned long</dd>
+          <br>
+          <dt><i>[[sample rate]]</i></dt>
+          <dd>이 AudioBuffer의 샘플 레이트 (단위: Hz). / 자료형: float</dd>
+          <br>
+          <dt><i>[[internal data]]</i></dt>
+          <dd>오디오 샘플 데이터를 가지고 있는 데이터 블럭.</dd>
+        </dl>
+        <br>
+        <pre>
+[Exposed=Window]
+interface AudioBuffer {
+  constructor (AudioBufferOptions options);
+  readonly attribute float sampleRate;
+  readonly attribute unsigned long length;
+  readonly attribute double duration;
+  readonly attribute unsigned long numberOfChannels;
+  Float32Array getChannelData (unsigned long channel);
+  undefined copyFromChannel (Float32Array destination,
+                             unsigned long channelNumber,
+                             optional unsigned long bufferOffset = 0);
+  undefined copyToChannel (Float32Array source,
+                           unsigned long channelNumber,
+                           optional unsigned long bufferOffset = 0);
+};
+        </pre>
+        <br>
+        <h3>1.4.1. 생성자</h3>
+        <dl>
+          <dt><i>AudioBuffer(options)</i></dt>
+          <dd>추후 번역</dd>
+          <br>
+          <table>
+            <caption>AudioBuffer.constructor() 메서드의 인자</caption>
+            <tr>
+              <td>매개변수</td>
+              <td>자료형</td>
+              <td>nullable</td>
+              <td>optional</td>
+              <td>설명</td>
+            </tr>
+            <tr>
+              <td>options</td>
+              <td>AudioBufferOptions</td>
+              <td>x</td>
+              <td>x</td>
+              <td>이 AudioBuffer의 프로퍼티를 결정하는 AudioBufferOptions</td>
+            </tr>
+          </table>
+        </dl>
+        <br>
 
         <h2>1.6. AudioParam 인터페이스</h2>
         <p>AudioParam은 0개 이상의 <strong>자동화 이벤트</strong>를 유지합니다. 각 자동화 이벤트는, AudioContext의 currentTime 어트리뷰트의 시간 좌표계의 <strong>자동화 이벤트 시간</strong>에 관련하여, 특정한 시간 범위에 대한 파라미터의 값 변화를 명시합니다. 자동화 이벤트의 리스트는 자동화 이벤트 시간의 오름차순으로 유지됩니다.</p>
