--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -1152,6 +1152,41 @@ interface AudioBuffer {
         <h2>1.5. AudioNode 인터페이스</h2>
         <p>AudioNode는 AudioContext의 구성 요소입니다. 이 인터페이스는 오디오 소스, 오디오 목적지, 중간 프로세싱 모듈을 나타냅니다. 이 모듈들은 오디오를 렌더링하여 오디오 하드웨어로 보내는 프로세싱 그래프를 형성하기 위해 함께 연결될 수 있습니다. 각 노드들은 입력 그리고/또는 출력을 가질 수 있습니다. 소스 노드는 입력이 없고 하나의 출력이 있습니다. 필터와 같은 대부분의 프로세싱 노드들은 하나의 입력과 하나의 출력을 갖습니다. 각 유형의 AudioNode는 어떻게 이것이 오디오를 처리하거나 합성하는지에 대한 세부 사항이 다릅니다. 하지만, 일반적으로, AudioNode는 (입력이 있다면) 입력을 처리하고, (출력이 있다면) 출력으로 오디오를 생성합니다.</p>
         <br>
+        <p>각 출력은 하나 이상의 채널을 가집니다. 채널의 정확한 수는 각 AudioNode의 세부 사항에 달려 있습니다.</p>
+        <br>
+        <p>출력은 하나 이상의 AudioNode 입력에 연결될 수 있으므로, 팬 아웃이 지원됩니다. 입력은 초기적으로 연결을 가지고 있지 않지만, 하나 이상의 AudioNode 출력으로부터 연결될 수 있으므로, 핸 인이 지원됩니다. connect() 메서드가 AudioNode의 출력을 다른 AudioNode의 입력에 연결하기 위해 호출되었을 때, 우리는 이것을 입력에의 연결이라고 부릅니다.</p>
+        <br>
+        <p>각 AudioNode 입력은 특정한 수의 채널을 주어진 시간에 가지고 있습니다. 이 숫자는 입력에 만들어진 연결(들)에 따라 바뀔 수 있습니다. 만약 입력이 연결을 가지고 있지 않다면 이것은 소리가 없는(silent) 하나의 채널을 가지고 있습니다.</p>
+        <br>
+        <p>각 입력에 대해, AudioNode는 그 입력으로 가는 모든 연결의 믹싱을 수행합니다. 규범적인 필요조건과 세부 사항에 대해서는 § 4 채널 업 믹싱과 다운 믹싱을 참고해 보세요.</p>
+        <br>
+        <p>입력의 프로세싱과 AudioNode의 내부 연산은 AudioContext 시간에 대하여 계속하여 발생하는데, 이는 노드가 연결된 출력을 가지고 있는지의 여부에 관계없으며, 이 출력이 궁극적으로 AudioContext의 AudioDestinationNode에 도달하는지의 여부에도 관계없습니다.</p>
+        <br>
+        <pre>
+[Exposed=Window]
+interface AudioNode : EventTarget {
+  AudioNode connect (AudioNode destinationNode,
+                     optional unsigned long output = 0,
+                     optional unsigned long input = 0);
+  undefined connect (AudioParam destinationParam, optional unsigned long output = 0);
+  undefined disconnect ();
+  undefined disconnect (unsigned long output);
+  undefined disconnect (AudioNode destinationNode);
+  undefined disconnect (AudioNode destinationNode, unsigned long output);
+  undefined disconnect (AudioNode destinationNode,
+                        unsigned long output,
+                        unsigned long input);
+  undefined disconnect (AudioParam destinationParam);
+  undefined disconnect (AudioParam destinationParam, unsigned long output);
+  readonly attribute BaseAudioContext context;
+  readonly attribute unsigned long numberOfInputs;
+  readonly attribute unsigned long numberOfOutputs;
+  attribute unsigned long channelCount;
+  attribute ChannelCountMode channelCountMode;
+  attribute ChannelInterpretation channelInterpretation;
+};
+        </pre>
+        <br>
 
         <h2>1.6. AudioParam 인터페이스</h2>
         <p>AudioParam은 0개 이상의 <strong>자동화 이벤트</strong>를 유지합니다. 각 자동화 이벤트는, AudioContext의 currentTime 어트리뷰트의 시간 좌표계의 <strong>자동화 이벤트 시간</strong>에 관련하여, 특정한 시간 범위에 대한 파라미터의 값 변화를 명시합니다. 자동화 이벤트의 리스트는 자동화 이벤트 시간의 오름차순으로 유지됩니다.</p>
