--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -1476,6 +1476,47 @@ interface AudioBufferSourceNode : AudioScheduledSourceNode {
         <br>
         <p>AudioDestinationNode는 AudioContext나 OfflineAudioContext의 목적지일 수 있고, 채널 속성들은 컨텍스트가 무엇인지에 달려 있습니다.</p>
         <br>
+        <p>AudioContext에 대해, 기본값은 아래와 같습니다.</p>
+        <table>
+          <tr>
+            <td>프로퍼티</td>
+            <td>값</td>
+            <td>참고</td>
+          </tr>
+          <tr>
+            <td>numberOfInputs</td>
+            <td>1</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>numberOfOutputs</td>
+            <td>1</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>channelCount</td>
+            <td>2</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>channelCountMode</td>
+            <td>"explicit"</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>channelInterPretation</td>
+            <td>"speakers"</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>tail-time</td>
+            <td>없음</td>
+            <td></td>
+          </tr>
+        </table>
+        <br>
+        <p>channelCount는 maxChannelCount보다 작거나 같은 값 무엇으로든 설정될 수 있습니다. 만약 이 값이 유효한 범위 내에 없다면 IndexSizeError는 반드시 발생되어야 합니다. 구체적인 예제로써, 만약 오디오 하드웨어가 8 채널의 출력을 지원한다면, channelCount는 8로 설정되고, 출력의 8 채널을 렌더링할 수 있을 것입니다.</p>
+        <br>
     </div>
     </main>
   </body>
