--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -1592,6 +1592,18 @@ interface AudioListener {
 };
         </pre>
         <br>
+        <h3>1.11.1. 어트리뷰트</h3>
+        <h3>1.11.2. 메서드</h3>
+        <h3>1.11.3. 프로세싱</h3>
+        <br>
+        <h2>1.12. AudioProcessingEvent 인터페이스 -- 폐기됨</h2>
+        <h3>1.12.1. 어트리뷰트</h3>
+        <h3>1.12.2. AudioProcessingEventInit</h3>
+        <h4>1.12.2.1. 딕셔너리 AudioProcessingEventInit 멤버</h4>
+        <br>
+        <h2>1.13. BiquadFilterNode 인터페이스</h2>
+        <p>BiquadFilterNode는 아주 일반적인 low-order 필터를 구현하는 AudioNode 프로세서입니다.</p>
+        <br>
     </div>
     </main>
   </body>
