--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -1604,6 +1604,8 @@ interface AudioListener {
         <h2>1.13. BiquadFilterNode 인터페이스</h2>
         <p>BiquadFilterNode는 아주 일반적인 low-order 필터를 구현하는 AudioNode 프로세서입니다.</p>
         <br>
+        <p>low-order 필터들은 기본적인 음색 제어 (bass, mid, treble), 그래픽 이퀼라이저, 더욱 발전된 필터의 구성 요소입니다. 다수의 BiquadFilterNode 필터는 결합되어 더욱 복잡한 필터를 형성할 수 있습니다. 주파수와 같은 필터의 파라미터는 filter sweep등을 위해 시간에 따라 변할 수 있습니다. 각 BiquadFilterNode는 아래의 IDL에 보여지는 몇 개의 일반적인 필터 유형 중 하나로써 설정될 수 있습니다. 기본 필터 유형은 "lowpass"입니다.</p>
+        <br>
     </div>
     </main>
   </body>
