--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -1606,6 +1606,12 @@ interface AudioListener {
         <br>
         <p>low-order 필터들은 기본적인 음색 제어 (bass, mid, treble), 그래픽 이퀼라이저, 더욱 발전된 필터의 구성 요소입니다. 다수의 BiquadFilterNode 필터는 결합되어 더욱 복잡한 필터를 형성할 수 있습니다. 주파수와 같은 필터의 파라미터는 filter sweep등을 위해 시간에 따라 변할 수 있습니다. 각 BiquadFilterNode는 아래의 IDL에 보여지는 몇 개의 일반적인 필터 유형 중 하나로써 설정될 수 있습니다. 기본 필터 유형은 "lowpass"입니다.</p>
         <br>
+        <p>추후 번역</p>
+        <h2>1.14. ChannelMergerNode 인터페이스</h2>
+        <p>ChannelMergerNode는 더욱 고급의 어플리케이션에서의 사용을 위한 것이고 종종 ChannelSplitterNode와 함께 사용될 것입니다.</p>
+        <p>표는 추후 번역</p>
+        <p>이 인터페이스는 다수의 오디오 스트림으로부터 하나의 오디오 스트림으로 채널을 합치기 위한 AudioNode를 나타냅니다. 이것은 가변적인 입력의 수 (기본값 6)을 가지지만, 이것의 모두가 연결될 필요가 있는 것은 아닙니다. 하나의 출력이 있는데, 이 출력의 오디오 스트림은 입력들 중 어느 것이 활발히 처리 중일 때 입력의 수와 동일한 채널의 수를 가집니다. 만약 입력 중 아무 것도 활발히 처리 중이 아니라면, 출력은 무음인 채널 하나입니다.</p>
+        <br>
     </div>
     </main>
   </body>
