--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -1612,6 +1612,11 @@ interface AudioListener {
         <p>표는 추후 번역</p>
         <p>이 인터페이스는 다수의 오디오 스트림으로부터 하나의 오디오 스트림으로 채널을 합치기 위한 AudioNode를 나타냅니다. 이것은 가변적인 입력의 수 (기본값 6)을 가지지만, 이것의 모두가 연결될 필요가 있는 것은 아닙니다. 하나의 출력이 있는데, 이 출력의 오디오 스트림은 입력들 중 어느 것이 활발히 처리 중일 때 입력의 수와 동일한 채널의 수를 가집니다. 만약 입력 중 아무 것도 활발히 처리 중이 아니라면, 출력은 무음인 채널 하나입니다.</p>
         <br>
+        <h2>1.15. ChannelSplitterNode 인터페이스</h2>
+        <p>ChannelSplitterNode는 더욱 고급의 어플리케이션에서의 사용을 위한 것이고 종종 ChannelMergerNode와 함께 사용될 것입니다.</p>
+        <p>표는 추후 번역</p>
+        <p>이 인터페이스는 라우팅 그래프에서 오디오 스트림의 각 채널에 접근하기 위한 AudioNode를 나타냅니다. 이것은 하나의 입력을 가지고 있고, 입력 오디오 스트림의 채널의 수와 같은 "작동하는" 출력의 수를 가지고 있습니다. 예를 들어, 스테레오 입력이 ChannelSplitterNode에 연결되었다면 작동하는 출력의 수는 2일 것입니다 (좌측 채널로부터 1개, 우측 채널로부터 1개). 항상 총 수 N의 출력이 있으며 (AudioContext 메서드 createChannelSplitter()의 numberOfOutputs 매개변수에 의해 결정됨), 기본값은 만약 이 값이 제공되지 않았다면 6입니다. "작동"하지 않는 모든 출력은 무음을 출력할 것이고 통상적으로 어떠한 것에도 연결되지 않을 것입니다.</p>
+        <br>
     </div>
     </main>
   </body>
