--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -1617,6 +1617,11 @@ interface AudioListener {
         <p>표는 추후 번역</p>
         <p>이 인터페이스는 라우팅 그래프에서 오디오 스트림의 각 채널에 접근하기 위한 AudioNode를 나타냅니다. 이것은 하나의 입력을 가지고 있고, 입력 오디오 스트림의 채널의 수와 같은 "작동하는" 출력의 수를 가지고 있습니다. 예를 들어, 스테레오 입력이 ChannelSplitterNode에 연결되었다면 작동하는 출력의 수는 2일 것입니다 (좌측 채널로부터 1개, 우측 채널로부터 1개). 항상 총 수 N의 출력이 있으며 (AudioContext 메서드 createChannelSplitter()의 numberOfOutputs 매개변수에 의해 결정됨), 기본값은 만약 이 값이 제공되지 않았다면 6입니다. "작동"하지 않는 모든 출력은 무음을 출력할 것이고 통상적으로 어떠한 것에도 연결되지 않을 것입니다.</p>
         <br>
+        <h2>1.16. ConstantSourceNode 인터페이스</h2>
+        <p>이 인터페이스는 출력이 명목상 상수 값인 고정된 오디오 소스를 나타냅니다. 이것은 일반적으로 고정된 소스 노드로서 유용하고 이것은 마치 이것의 오프셋을 자동화함으로써 또는 이것에 다른 노드를 연결함으로써 생성 가능한 AudioParam인 것처럼 사용될 수 있습니다.</p>
+        <br>
+        <p>이 노드의 하나의 출력은 한 개의 채널 (모노) 로 이루어져 있습니다.</p>
+        <br>
     </div>
     </main>
   </body>
