--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -1622,6 +1622,12 @@ interface AudioListener {
         <br>
         <p>이 노드의 하나의 출력은 한 개의 채널 (모노) 로 이루어져 있습니다.</p>
         <br>
+        <h2>1.17. ConvolverNode 인터페이스</h2>
+        <p>이 인터페이스는 임펄스 응답이 주어졌을 때 선형 콘볼루션 이펙트를 적용하는 프로세싱 노드를 나타냅니다.</p>
+        <p>표는 추후 번역</p>
+        <p>이 노드의 입력은 모노 (1 채널) 혹은 스테레오 (2 채널) 이고 증가될 수 없습니다. 더욱 많은 채널을 가진 노드로부터의 연결은 적절하게 다운믹스될 것입니다.</p>
+        <p>이 노드에는 channelCount 제약과 channelCountMode 제약이 있습니다. 이 제약들은 이 노드에의 입력이 모노나 스테레오임을 보장합니다.</p>
+        <br>
     </div>
     </main>
   </body>
